[project]
name = "prae-agent-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel >= 6.29.5",
    "ipywidgets >= 8.1.7",
    "openai >= 1.91.0",
    "smolagents >= 1.18.0",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "black >= 25.1.0",
    "mypy >= 1.16.1"
]

[tool.black]
target-version = ['py312']
line-length = 120
force-exclude = '''.*\.ipynb$'''
skip-string-normalization = true

[tool.mypy]
python_version = "3.12"
disable_error_code = "import-untyped"
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]